Ajout de merci.html + update formulaire

--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
           <input type="hidden" name="_subject" value="Nouvelle demande de devis">
           <input type="hidden" name="_captcha" value="false">
           <input type="hidden" name="_template" value="table">
+          <input type="hidden" name="_next" value="https://www.ithabit.com/merci.html">
+
 
           <button class="py-3 rounded-lg bg-[#1E5EFF]">Envoyer</button>
         </form>
